deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wpextdb
  annotations:
    flux.weave.works/automated_user: Sadhana N <sadhana.anjan@gmail.com>
    flux.weave.works/automated: 'true'
    flux.weave.works/automated_msg: test
spec:
  selector:
    matchLabels:
      app: wpextdb
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wpextdb
        tier: frontend
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wpdb-pvc
